Fix: migrated to Sass module system and resolved variable scope issues

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -12,6 +12,8 @@
 ORDER: Base + Typography > Generar Layout + Grid > Page Layout > Components
 
 */
+@use "../abstracts/variables" as *;
+
 @mixin respond($breakpoint) {
   // Phone-xs
   @if $breakpoint == phone-xs {
