--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -1,15 +1,15 @@
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
 #contact {
-  background-image: linear-gradient(
-    135deg,
-    $primary-color 0%,
-    $secondary-color 100%
-  );
+  background-color: $white-color;
+  color: $dark-blue-text;
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   padding: 15rem 0 10rem 0;
   margin-top: -10rem;
   margin-bottom: -1px;
-  color: $white-color;
+  color: black;
 
   @include respond(tab-land) {
     padding: 10rem 0;
@@ -20,11 +20,13 @@
 
   .contact-wrapper {
     margin-top: 3.2rem;
+    color: $dark-blue-text;
     padding: 0 2rem;
     backface-visibility: hidden;
 
     &__text {
       margin-bottom: 2.5rem;
+      color: $dark-grey;
     }
 
     &__text,
