--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,21 @@
-@import "./sass/vendors/bootstrap.scss";
+@use "sass/vendors/bootstrap.scss";
 
-@import "./sass/abstracts/mixins";
-@import "./sass/abstracts/variables";
-@import "./sass/abstracts/helpers";
+@use "sass/abstracts/mixins" as *;
+@use "sass/abstracts/variables" as *;
+@use "sass/abstracts/helpers";
 
-@import "./sass/base/base";
-@import "./sass/base/typography";
+@use "sass/abstracts" as *;
 
-@import "./sass/components/buttons";
+@use "sass/base/base";
+@use "sass/base/typography";
 
-@import "./sass/layout/footer";
-@import "./sass/layout/sections";
+@use "sass/components/buttons";
 
-@import "./sass/sections/about";
-@import "./sass/sections/contact";
-@import "./sass/sections/hero";
-@import "./sass/sections/projects";
+@use "sass/layout/footer";
+@use "sass/layout/sections";
+
+@use "sass/sections/about";
+@use "sass/sections/contact";
+@use "sass/sections/hero";
+@use "sass/sections/projects";
+@use "sass/sections/experience";
